# copper-scales

./: NOTES.md  README.md
bom-solver/: .gitignore  NOTES.md  PRD.md  README.md  app.py  generate_fixtures.py  pyproject.toml  validation.py
bom-solver/bom_solver/: app.py  solver.py  validation.py
bom-solver/tests/: test_solver.py  test_validation.py
bom-solver/tests/fixtures/: 01_prd_example.json  02_fully_determined.json  03_underdetermined.json  04_infeasible.json  05_det_extremes.json  06_det_5row.json  07_det_10row.json  08_det_25row.json  09_det_50row.json  10_det_100row.json  11_und_l1_choice.json  12_und_equal_split.json  13_und_feasible_start.json  14_und_zero_starts.json  15_und_four_free.json  16_und_many_rows.json  17_inf_mass_only.json  18_inf_copper_only.json  19_inf_both_k2.json  20_inf_cu_pct_unlocked.json
